# github-jira-sync

./: .gitignore  README.md  design.md  requirements.txt  setup.cfg
cicd/: build.sh
github-jira-sync/: README.md
issues_sync/: config.py  detect_mappings.py  file_state.py  finder.py  github_connection.py  issue.py  jira_connection.py  main.py  state.py  sync_engine.py  sync_strategy.py  utils.py
src/issues_sync/: config.py  detect_mappings.py  file_state.py  issue.py  utils.py
tests/: test_config.py  test_e2e.py  test_e2e_full.py  test_github_connection.py  test_jira_connection.py  test_sync_engine.py  test_sync_strategy.py
