# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = github-jira-sync
version = 0.1
description = Synchronize issues between a GitHub repository and a Jira project
author = Antoni Ivanov
author-email = anthvt@gmail.com
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/tozka/github-jira-sync
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
# setting find_namespace so we can use PEP 420 implicit package
# https://setuptools.readthedocs.io/en/latest/setuptools.html#find-namespace-packages
packages = find_namespace:
include_package_data = True
package_dir =
    =src


# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    PyGithub
    jira
    tenacity
    click
    toml

# Require a specific Python version
python_requires = >=3.7, <4



[options.packages.find]
where = src
exclude =
    tests


[options.entry_points]
console_scripts =
    detect-mappings = issues_sync.detect_mappings:detect_mappings

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1
